force-app/main/default/objects/SF_Case_MuleSoft_PE__e/SF_Case_MuleSoft_PE__e.object-meta.xml
<CustomObject>
    <label>SF_Case_MuleSoft_PE</label>
    <pluralLabel>SF_Case_MuleSoft_PE</pluralLabel>
</CustomObject>