force-app/main/default/objects/SF_Case_MuleSoft_PE__e/fields/Billing_Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Last_Name__c</fullName>
    <description>This field contains Billing Contact Last Name.</description>
    <label>Billing_Contact_Last_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>