force-app/main/default/objects/SF_Case_MuleSoft_PE__e/fields/Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country__c</fullName>
    <description>This field contains Billing Country (Either US or CA)</description>
    <label>Billing_Country</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>