force-app/main/default/objects/SF_Case_MuleSoft_PE__e/fields/Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_ID__c</fullName>
    <description>This field contains Salesforce Case ID.</description>
    <label>Case ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>