force-app/main/default/objects/SF_Case_MuleSoft_PE__e/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <description>This field contains Customer ID present on Case Record.</description>
    <label>Customer_Account</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>